<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UpdateActivity"
    android:id="@+id/mainLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainVL">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/callsignHL"
                android:layout_marginTop="@dimen/spacer_size">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/callsign_label"
                    android:id="@+id/callsignLabel"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CA1SGN"
                    android:id="@+id/callsignContent"
                    android:textSize="@dimen/text_size"
                    android:layout_marginLeft="10px" />
            </LinearLayout>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentQTHField"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/spacer_size"
                android:hint="@string/current_qth_hint"
                android:textIsSelectable="false"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentQTHLocatorField"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/spacer_size"
                android:hint="@string/current_qth_locator_hint"
                android:textIsSelectable="false"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_address_btn_label"
                android:id="@+id/fromAddressBtn"
                android:layout_marginTop="@dimen/spacer_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_locator_btn_label"
                android:id="@+id/fromLocatorBtn"
                android:layout_marginTop="@dimen/spacer_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/geolocateBtn"
                android:text="@string/geolocate_btn_label"
                android:layout_marginTop="@dimen/spacer_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_btn_label"
                android:id="@+id/updateBtn"
                android:layout_marginTop="@dimen/spacer_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_btn_label"
                android:id="@+id/logoutBtn"
                android:layout_marginTop="@dimen/spacer_size" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/please_wait"
        android:id="@+id/pleaseWaitTV"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#d0d0d0"
        android:textSize="@dimen/hint_text_size"
        android:visibility="invisible" />

</RelativeLayout>
