<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.phitherek.rlcallsignqthupdater.LoginActivity"
    android:id="@+id/loginMainLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginMainVL">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/callsignField"
            android:textSize="@dimen/text_size"
            android:hint="@string/callsign_hint"
            android:layout_marginTop="@dimen/spacer_size" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:textSize="@dimen/text_size"
            android:hint="@string/password_hint"
            android:layout_marginTop="@dimen/spacer_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_label"
            android:id="@+id/loginButton"
            android:layout_marginTop="@dimen/spacer_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="485dp"
        android:text="@string/please_wait"
        android:id="@+id/loginPleaseWaitTV"
        android:textColor="#d0d0d0"
        android:textSize="@dimen/hint_text_size"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible" />

</RelativeLayout>
